--- a/SisFiespApplication/Views/Avaliacoes/Edit.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/Edit.cshtml
@@ -177,8 +177,8 @@
                                                                     <div class="col-sm-5">
                                                                         <h6 class="f-w-400 m-b-30"><i class="icofont icofont-people"></i>Apoio Escolar :</h6>
                                                                     </div>
-                                                                    <div class="col-sm-7">
-                                                                        <h6 class="m-b-30">Alterar</h6>
+                                                                    <div id="apoioEscolarAluno" class="col-sm-7">
+                                                                        @aluno.ApoioEsolarNome
                                                                     </div>
                                                                 </div>
                                                                 <div class="row">
