--- a/SisFiespApplication/Views/Avaliacoes/_partialDetalhe.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialDetalhe.cshtml
@@ -7,6 +7,7 @@
     string conduta = "";
     string nomeAluno = "";
 
+
     @foreach (var avaliacaoDetalhe in ViewData["ListaDetalhe"] as IEnumerable<AvaliacaoDetalhe>)
     {
         avaliacaodetalhecodigo = avaliacaoDetalhe.Codigo;
@@ -74,7 +75,7 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default waves-effect " id="fecharModal" data-dismiss="modal">Fechar</button>
-        <button type="button" class="btn btn-primary waves-effect waves-light " onclick="salvarAvaliacaoDetalhe()">Salvar</button>
+        <button type="button" class="btn btn-primary waves-effect waves-light " data-dismiss="modal" onclick="salvarAvaliacaoDetalhe()">Salvar</button>
     </div>
 
 }
