--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -526,14 +526,17 @@
                                         <span class="pcoded-mcaret"></span>
                                     </a>
                                     <ul class="pcoded-submenu">
+                                        <li class="">    <a asp-area="" asp-controller="Usuarios" asp-action="Index" id="menuUsuario">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Usuários</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-area="" asp-controller="Escolas" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Escolas</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-area="" asp-controller="Diagnosticos" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Diagnósticos</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-area="" asp-controller="Modalidades" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Modalidade/Fase</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                        <li class="">    <a asp-area="" asp-controller="ApoiosEscolar" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Apoio Escolar</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-controller="Alunos" asp-action="Index" id="menuAlunos">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Alunos</span>        <span class="pcoded-mcaret"></span>    </a></li>
-                                        <li class="">    <a asp-area="" asp-controller="Usuarios" asp-action="Index" id="menuUsuario">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Usuários</span>        <span class="pcoded-mcaret"></span>    </a></li>
+
                                     </ul>
                                 </li>
                                 <li class="">    <a asp-area="" asp-controller="Avaliacoes" asp-action="Index" id="menuAvaliacao">        <span class="pcoded-micon"><i class="icofont icofont-paper"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Avaliações</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                <li class="">    <a asp-area="" asp-controller="Agendas" asp-action="Index" id="menuAvaliacao">        <span class="pcoded-micon"><i class="icofont icofont-ui-calendar"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Agenda</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a href="retalorio.html">        <span class="pcoded-micon"><i class="icofont icofont-file-alt"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Relatórios</span>        <span class="pcoded-mcaret"></span>    </a></li>
 
                             </ul>
@@ -561,6 +564,7 @@
     <script src="~/jsView/diagnostico.js" asp-append-version="true"></script>
     <script src="~/jsView/modalidade.js" asp-append-version="true"></script>
     <script src="~/jsView/avaliacao.js" asp-append-version="true"></script>
+    <script src="~/jsView/apoioEscolar.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
